--- a/SpaceXMission/Resources/en.lproj/Localizable.strings
+++ b/SpaceXMission/Resources/en.lproj/Localizable.strings
@@ -10,4 +10,8 @@
 "mission_date" = "Mission Date: ";
 "mission_status" = "Mission Status: ";
 "no_date_error" = "There is no date recorded for this mission";
-"no_mission_detail_error" = "We do not have any information available regarding this mission at this time.";
+"no_mission_detail_error" = "Unfortunately there are no details about this mission!";
+"wikipedia_link" = "Wikipedia Link";
+"mission_name" = "Mission Name";
+"mission_details" = "Details of the mission";
+"execution_date" = "Execution Date";
